# predict_shop

./: README.md  pyproject.toml
app/: main.py
app/alembic/versions/: 2024_11_25_1120-c54d009baf0e_add_product_model.py  2024_11_29_1536-a351b2b7703b_add_order_model.py
app/api/api_v1/: __init__.py  auth.py  basket.py  dependencies.py  orders.py  products.py
app/core/: config.py
app/core/models/: __init__.py  base.py  basket.py  busket.py  order.py  product.py  user.py
app/repositories/: basket.py  order.py  user.py
app/schemas/: order.py  product.py  user.py  users.py
app/services/: auth.py
app/utils/: db_manager.py
backend/: README.md  docker-compose.yml
backend/app/: .env.example  alembic.ini
backend/app/alembic/versions/: 2024_11_17_1410-1b77ad88f2f2_initial.py  2024_11_22_1517-b1689eb2150b_add_user_model.py  2024_11_28_1312-8a8a409ac402_add_busket_and_busket_item_model.py
backend/app/api/api_v1/: __init__.py  auth.py  dependencies.py  orders.py
backend/app/core/models/: base.py  basket.py  db_helper.py
backend/app/repositories/: base.py  basket.py  order.py  product.py
backend/app/schemas/: basket.py
backend/app/services/: auth.py
backend/app/utils/: db_manager.py
etl/src/: main.py
etl/src/ETL/: DAG.py  ETL.py
